--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					    </div>
 					    <div class="col-md topper d-flex align-items-center align-items-stretch">
 					    	<p class="mb-0 d-flex d-block">
-					    		<a href="#" class="btn btn-primary d-flex align-items-center justify-content-center">
+					    		<a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Orçamento" class="btn btn-primary d-flex align-items-center justify-content-center">
 					    			<span>Faça Seu Orçamento</span>
 					    		</a>
 					    	</p>
@@ -77,7 +77,7 @@
 	        	<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Início</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">Sobre Nós</a></li>
 	        	<li class="nav-item"><a href="project.html" class="nav-link">Serviços</a></li>
-	        <li class="nav-item"><a href="contact.html" class="nav-link">Parceiros</a></li>
+	        <li class="nav-item"><a href="blog.html" class="nav-link">Parceiros</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contato</a></li>
 	        </ul>
 	      </div>
@@ -95,7 +95,7 @@
           <div class="col-md-6 text ftco-animate pl-md-5">
             <h1 class="mb-4">Soluções <span>Em Eletricidade</span></h1>
             <h3 class="subheading">Projetos de Instalações, Laudos e Geração de Energia Solar</h3>
-            <p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Orçamento</a></p>
+            <p><a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Orçamento" class="btn btn-secondary px-4 py-3 mt-3">Orçamento</a></p>
           </div>
         </div>
         </div>
@@ -108,7 +108,7 @@
           <div class="col-md-6 text ftco-animate pl-md-5">
             <h1 class="mb-4">Soluções <span>Em Eletricidade</span></h1>
             <h3 class="subheading">Projetos de Instalações, Laudos e Geração de Energia Solar</h3>
-            <p><a href="#" class="btn btn-secondary px-4 py-3 mt-3">Orçamento</a></p>
+            <p><a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Orçamento" class="btn btn-secondary px-4 py-3 mt-3">Orçamento</a></p>
           </div>
         </div>
         </div>
@@ -125,7 +125,7 @@
     						<span class="subheading">Gere Sua Própia Energia</span>
     						<h3>Saiba Como</h3>
     					</div>
-    					<form action="#" class="request-form ftco-animate">
+    					<form method="post" action="https://site-natal-projetos.web.app/cgi-sys/FormMail.cgi" class="request-form ftco-animate">
 		    				<div class="form-group">
 		    					<input type="text" class="form-control" placeholder="Nome">
 		    				</div>
@@ -153,7 +153,7 @@
 		              <textarea name="" id="" cols="30" rows="2" class="form-control" placeholder="Número do Contrato"></textarea>
 		            </div>
 		            <div class="form-group">
-		              <input type="submit" value="Enviar" class="btn btn-primary py-3 px-4">
+		              <input  type="submit" value="Enviar" class="btn btn-primary py-3 px-4">
 		            </div>
 		    			</form>
     				</div>
@@ -164,7 +164,7 @@
 	          </div>
 	          <div class="">
 							<p class="mb-5">A NATAL PROJETOS, foi fundada em 2014 e foi criada com o objetivo de contribuir para a sustentabilidade do meio ambiente e, ao mesmo tempo, trazer benefícios financeiros para seus clientes. Com esta ideia principal nós estamos conquistando, cada vez mais, espaço no mercado. Utilizando a experiência e qualificações nos serviços, a NATAL PROJETOS é capaz de prover projetos com a mais alta qualidade técnica, desenvolvendo as melhores soluções para seus clientes baseadas nas necessidades específicas de cada um.</p>
-							<p><a href="#" class="btn btn-secondary px-5 py-3">Saiba Mais</a></p>
+							<p><a href="about.html" class="btn btn-secondary px-5 py-3">Saiba Mais</a></p>
 						</div>
 					</div>
     		</div>
@@ -236,8 +236,8 @@
 				<div class="row justify-content-center">
 					<div class="col-md-9 text-center">
 						<h2>Como eu faço para instalar energia solar?</h2>
-						<p>É muito simples! Participe da Nossa Consultoria de Como Instalar Energia Solar e veja todos os procedimentos.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary px-4 py-3">Quero Participar</a></p>
+						<p>É muito simples! Participe da Nossa Consultoria de Como Instalar Energia Solar e veja todos os procedimentos. <b></b>Enviaremos um email em até 24 horas com todas as informações.</p>
+						<p class="mb-0"><a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Como eu faço para instalar energia solar?" class="btn btn-primary px-4 py-3">Quero Participar</a></p>
 					</div>
 				</div>
 			</div>
