--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 					    </div>
 					    <div class="col-md topper d-flex align-items-center align-items-stretch">
 					    	<p class="mb-0 d-flex d-block">
-					    		<a href="#" class="btn btn-primary d-flex align-items-center justify-content-center">
+					    		<a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Orçamento" class="btn btn-primary d-flex align-items-center justify-content-center">
 					    			<span>Faça Seu Orçamento</span>
 					    		</a>
 					    	</p>
@@ -77,7 +77,7 @@
 	        	<li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
 	        	<li class="nav-item active"><a href="about.html" class="nav-link  pl-0">Sobre Nós</a></li>
 	        	<li class="nav-item"><a href="project.html" class="nav-link">Serviços</a></li>
-	        <li class="nav-item"><a href="contact.html" class="nav-link">Parceiros</a></li>
+	        <li class="nav-item"><a href="blog.html" class="nav-link">Parceiros</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contato</a></li>
 	        </ul>
 	      </div>
