--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
 					    </div>
 					    <div class="col-md topper d-flex align-items-center align-items-stretch">
 					    	<p class="mb-0 d-flex d-block">
-					    		<a href="#" class="btn btn-primary d-flex align-items-center justify-content-center">
+					    		<a href="mailto:natalprojetos@gmail.com?cc=jaquespd@gmail.com&subject=Orçamento" class="btn btn-primary d-flex align-items-center justify-content-center">
 					    			<span>Faça Seu Orçamento</span>
 					    		</a>
 					    	</p>
